samples/_failures_safe/1761179029_03478f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02c1334d.c: In function ‘main’:
./samples/SAFE/__tmp_02c1334d.c:132:26: error: missing terminating " character
  132 |     mat2.rows = read_int("
      |                          ^
./samples/SAFE/__tmp_02c1334d.c:132:5: error: expected expression at end of input
  132 |     mat2.rows = read_int("
      |     ^~~~
./samples/SAFE/__tmp_02c1334d.c:132:17: error: too few arguments to function ‘read_int’
  132 |     mat2.rows = read_int("
      |                 ^~~~~~~~
./samples/SAFE/__tmp_02c1334d.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_02c1334d.c:132:5: error: expected declaration or statement at end of input
  132 |     mat2.rows = read_int("
      |     ^~~~
